Switch a use of Arrays.asList to List.of