@@ -15,8 +15,8 @@
  */
 package org.openntf.xsp.jakarta.cdi.bean;
 
-import java.util.Arrays;
 import java.util.Collection;
+import java.util.List;
 
 import org.openntf.xsp.jakarta.cdi.discovery.CDIClassContributor;
 
@@ -30,7 +30,7 @@ public class BuiltinBeanClassContributor implements CDIClassContributor {
 
 	@Override
 	public Collection<Class<?>> getBeanClasses() {
-		return Arrays.asList(
+		return List.of(
 			DominoFacesImplicitObjectProvider.class,
 			HttpContextBean.class
 		);
